--- a/css/style.css
+++ b/css/style.css
@@ -724,11 +724,17 @@ img {
     width: 360px;
     height: 40px;
     padding-left: 38px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover {
+.modal-input:focus {
     border-color: #4d5ae5;
+}
+
+.modal-input:focus + .modal-input-icon {
+    fill: #4d5ae5;
 }
 
 .modal-btn-send {
@@ -744,13 +750,23 @@ img {
     background-color: transparent;
     outline: transparent;
     padding: 8px 16px;
-    color: teal;
-    transition: border-color 300ms linear;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     resize: none;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     width: 360px;
     height: 120px;
+}
+
+.modal-text:focus {
+    border-color: #4d5ae5;
+}
+
+.modal-text::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 }
 
 .box-input-svg {
@@ -766,5 +782,48 @@ img {
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-check-text {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.modal-check-link {
+    line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.modal-check-text span {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-right: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* fill: transparent; */
+}
+
+.modal-check-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-check:checked + .check-text span {
+    background-color: #fd9222;
+    border: none;
+    fill: #fafafa;
+  }
 
 /* ====================================================================== */
