--- a/css/style.css
+++ b/css/style.css
@@ -608,19 +608,24 @@ img {
     background-color: transparent;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     padding-left: 16px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
 }
 
 .footer-input::placeholder {
     font-size: 12px;
     line-height: 2;
-    letter-spacing: 0.04em;
-    color: #FFFFFF;
+    letter-spacing: 0.04;
+    color: #ffffff;
+    
 }
 
 .footer-btn-form {
     border-radius: 4px;
     padding: 8px 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
     background-color: #4d5ae5;
     border: none;
@@ -638,6 +643,7 @@ img {
 
 .footer-form-icon {
     fill: #fff;
+    margin-left: 16px;
 }
 
 /* ====================================================================== */
@@ -653,6 +659,8 @@ img {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
 }
 
 .is_open {
@@ -664,7 +672,7 @@ img {
 .modal {
     border-radius: 4px;
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background-color: #fcfcfc;
     position: absolute;
@@ -672,6 +680,7 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close {
@@ -709,6 +718,14 @@ img {
     margin-bottom: 8px;
 }
 
+.modal-field:four-child {
+    margin-bottom: 16px;
+}
+
+.modal-field:last-child {
+    margin-bottom: 24px;
+}
+
 .modal-label {
     font-size: 12px;
     line-height: 1.17;
@@ -726,7 +743,7 @@ img {
     padding-left: 38px;
     background-color: transparent;
     outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -740,10 +757,26 @@ img {
 .modal-btn-send {
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-send:hover,
+.modal-btn-send:focus {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
 }
 
 .modal-text {
@@ -756,6 +789,10 @@ img {
     border-radius: 4px;
     width: 360px;
     height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-text:focus {
@@ -800,30 +837,33 @@ img {
     color: #4d5ae5;
 }
 
-.modal-check-text span {
+.label-span-footer {
     position: relative;
     width: 16px;
     height: 16px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 12px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    /* fill: transparent; */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
 }
+
 
 .modal-check-icon {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-check:checked + .check-text span {
-    background-color: #fd9222;
+.modal-check:checked > .label-span-footer {
+    background-color: #404bbf;
     border: none;
-    fill: #fafafa;
+    fill: #F4F4FD; 
   }
 
 /* ====================================================================== */
