--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@ img {
     background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 0;
 }
 
@@ -868,7 +868,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-check:checked + .modal-text > .label-span-footer {
+.modal-check:checked + .label-span-footer {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD; 
