--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,8 @@ img {
     background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 0;
 }
 
@@ -834,7 +835,6 @@ img {
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    position: relative;
     display: inline-flex;
     align-items: center;
 }
@@ -868,7 +868,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input[type="checkbox"]:checked + .label-span-footer {
+.modal-check:checked + .modal-check-text span {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD; 
